# Computer_Vision

./: README.md
Lab/: pyproject.toml
Lab/Lab_01/Linear_Stretch/: main.py
Lab/Lab_01/Otsu_Thresholding/: README.md
Labs/: .gitignore  README.md  pyproject.toml
Labs/Lab_01/Color_Histogram/: README.md  main.py
Labs/Lab_01/Linear_Stretch/: README.md  main.py
Labs/Lab_01/Otsu_Thresholding/: main.py
Labs/Lab_01/Thresholding/: README.md  main.py
Labs/Lab_02/Convolution_2D/: main.py  optimized_version.py
Labs/Lab_02/Max_Pooling_2D/: main.py  optimized_version.py
Labs/Lab_03/: README.md  main.py
Labs/Lab_04/Dot_Product_Attention/: README.md  main.py
Labs/Lab_04/Vision_Transformer/: main.ipynb
Labs/Lab_05/: README.md  roi_pooling.ipynb
Labs/Lab_06/: README.md  main.py
Labs/Lab_07/: main.ipynb
