[project]
name = "laboratori"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.13.0.92",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "matplotlib>=3.8.0",
    "torchvision>=0.25.0",
    "jupyter>=1.1.1",
]
